WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119714
On request error, always fire events on the XMLHttpRequestUpload before the XMLHttpRequest
https://bugs.webkit.org/show_bug.cgi?id=119714
Summary
On request error, always fire events on the XMLHttpRequestUpload before the X...
Ryosuke Niwa
Reported
2013-08-12 19:21:05 PDT
Consider merging
https://chromium.googlesource.com/chromium/blink/+/20f42ed7623cc7366293ca610e6f40609185a591
On request error, fire events on the XMLHttpRequestUpload object before the XMLHttpRequest object as per the latest specification:
http://xhr.spec.whatwg.org/#request-error
IE10 behaves according to specification but blink was firing the events on the XMLHttpRequest object BEFORE the XMLHttpRequestUpload object in case of 'network error' or 'abort error'. Blink was however behaving according to specification in case of 'timeout error', which was inconsistent.
Attachments
Patch
(8.37 KB, patch)
2013-08-13 01:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-08-13 01:19:34 PDT
Created
attachment 208607
[details]
Patch
WebKit Commit Bot
Comment 2
2013-08-13 09:14:57 PDT
Comment on
attachment 208607
[details]
Patch Clearing flags on attachment: 208607 Committed
r154004
: <
http://trac.webkit.org/changeset/154004
>
WebKit Commit Bot
Comment 3
2013-08-13 09:15:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug